[gd_scene load_steps=60 format=2]

[ext_resource path="res://Objects/Enemies/Goblin.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/goblin/left/l1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/goblin/left/l2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/goblin/left/l3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/goblin/left/l4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/goblin/left/l5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/goblin/left/l6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/goblin/right/r1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/goblin/right/r2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/goblin/right/r3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/goblin/right/r4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/goblin/right/r5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/goblin/right/r6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/goblin/Top/t1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/goblin/Top/t2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/goblin/Top/t4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/goblin/Top/t3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/goblin/Top/t5.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/goblin/Top/t6.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/goblin/bottom/b1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Images/goblin/bottom/b2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Images/goblin/bottom/b3.png" type="Texture" id=22]
[ext_resource path="res://Assets/Images/goblin/bottom/b4.png" type="Texture" id=23]
[ext_resource path="res://Assets/Images/goblin/bottom/b5.png" type="Texture" id=24]
[ext_resource path="res://Assets/Images/goblin/bottom/b6.png" type="Texture" id=25]
[ext_resource path="res://Assets/Images/goblin/left/l7.png" type="Texture" id=26]
[ext_resource path="res://Assets/Images/goblin/left/l9.png" type="Texture" id=27]
[ext_resource path="res://Assets/Images/goblin/left/l8.png" type="Texture" id=28]
[ext_resource path="res://Assets/Images/goblin/left/l10.png" type="Texture" id=29]
[ext_resource path="res://Assets/Images/goblin/left/l11.png" type="Texture" id=30]
[ext_resource path="res://Assets/Images/goblin/left/l12.png" type="Texture" id=31]
[ext_resource path="res://Assets/Images/goblin/bottom/b7.png" type="Texture" id=32]
[ext_resource path="res://Assets/Images/goblin/bottom/b8.png" type="Texture" id=33]
[ext_resource path="res://Assets/Images/goblin/bottom/b9.png" type="Texture" id=34]
[ext_resource path="res://Assets/Images/goblin/bottom/b10.png" type="Texture" id=35]
[ext_resource path="res://Assets/Images/goblin/bottom/b11.png" type="Texture" id=36]
[ext_resource path="res://Assets/Images/goblin/bottom/b12.png" type="Texture" id=37]
[ext_resource path="res://Assets/Images/goblin/right/r7.png" type="Texture" id=38]
[ext_resource path="res://Assets/Images/goblin/right/r9.png" type="Texture" id=39]
[ext_resource path="res://Assets/Images/goblin/right/r8.png" type="Texture" id=40]
[ext_resource path="res://Assets/Images/goblin/right/r10.png" type="Texture" id=41]
[ext_resource path="res://Assets/Images/goblin/right/r11.png" type="Texture" id=42]
[ext_resource path="res://Assets/Images/goblin/right/r12.png" type="Texture" id=43]
[ext_resource path="res://Assets/Images/goblin/dead/d1.png" type="Texture" id=44]
[ext_resource path="res://Assets/Images/goblin/dead/d2.png" type="Texture" id=45]
[ext_resource path="res://Assets/Images/goblin/dead/d3.png" type="Texture" id=46]
[ext_resource path="res://Assets/Images/goblin/dead/d4.png" type="Texture" id=47]
[ext_resource path="res://Assets/Images/goblin/dead/d5.png" type="Texture" id=48]
[ext_resource path="res://Assets/Images/goblin/Top/t7.png" type="Texture" id=49]
[ext_resource path="res://Assets/Images/goblin/Top/t8.png" type="Texture" id=50]
[ext_resource path="res://Assets/Images/goblin/Top/t9.png" type="Texture" id=51]
[ext_resource path="res://Assets/Images/goblin/Top/t10.png" type="Texture" id=52]
[ext_resource path="res://Assets/Images/goblin/Top/t11.png" type="Texture" id=53]
[ext_resource path="res://Assets/Images/goblin/Top/t12.png" type="Texture" id=54]
[ext_resource path="res://Assets/Images/lifebar/lifebar1.png" type="Texture" id=55]
[ext_resource path="res://Assets/Images/lifebar/lifebar3..png" type="Texture" id=56]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "right",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "top",
"speed": 7.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "bottom",
"speed": 7.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "attackleft",
"speed": 7.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "attackbottom",
"speed": 7.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "attackright",
"speed": 7.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "dead",
"speed": 7.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "attacktop",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 15.2599 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.72148
height = 18.0055

[node name="Goblin" type="PathFollow2D"]
position = Vector2( 0, -2.45529 )
scale = Vector2( 1.02865, 0.923272 )
rotate = false
cubic_interp = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.72148, -4.76837e-07 )
frames = SubResource( 1 )
animation = "right"
frame = 4
playing = true

[node name="Towerhit" type="Area2D" parent="."]
position = Vector2( 1.19209e-07, 13.4904 )
scale = Vector2( 1, 0.956676 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towerhit"]
position = Vector2( 1.19209e-07, -10.3489 )
scale = Vector2( 0.5, 5 )
shape = SubResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_left = -19.0
margin_top = -41.0
margin_right = 21.0
margin_bottom = -34.0
max_value = 50.0
value = 50.0
texture_under = ExtResource( 55 )
texture_progress = ExtResource( 56 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="area_entered" from="Towerhit" to="." method="_on_Towerhit_area_entered"]
[connection signal="area_exited" from="Towerhit" to="." method="_on_Towerhit_area_exited"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
